multi-select search in modal window, blueprints flickering issue

--- a/blueprints/ember-junction/files/app/styles/app.scss
+++ b/blueprints/ember-junction/files/app/styles/app.scss
@@ -331,3 +331,7 @@ table tbody th {
   padding: 1rem;
   border-radius: 0.25rem;
 }
+
+.ember-power-select-dropdown {
+  z-index: 1100 !important; /* Higher than Bootstrap's modal z-index */
+}
